--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -228,37 +228,37 @@
             .wjs-scroll__content-wrapper
               .wjs-scroll__content
                 ul.popup__list#memberslist
-                  li.popup__item
-                    label
-                      input(type="checkbox" checked)
-                      i.ico.check &#x5a;
-                      i.ico.uncheck &#x56;
-                      span Вася Пупкін
-                      span (@WEORI75MoBvQOhNq)
+                  //- li.popup__item
+                  //-   label
+                  //-     input(type="checkbox" checked)
+                  //-     i.ico.check &#x5a;
+                  //-     i.ico.uncheck &#x56;
+                  //-     span Вася Пупкін
+                  //-     span (@WEORI75MoBvQOhNq)
         .popup__col
           .popup__text пошук по id
           .popup__search-wrapper
             input(type="text" name="id")
-            i.ico &#x55;
+            i.ico#searchIDInGP &#x55;
             .popup__search-result
-              label
-                input(type="checkbox")
-                i.ico.check &#x5a;
-                i.ico.uncheck &#x56;
-                span Вася Пупкін
-                span (@WEORI75MoBvQOhNq)
+          //-     label
+          //-       input(type="checkbox")
+          //-       i.ico.check &#x5a;
+          //-       i.ico.uncheck &#x56;
+          //-       span Вася Пупкін
+          //-       span (@WEORI75MoBvQOhNq)
           .popup__text Вибрати з контактів
           .popup__list-wrapper.wjs-scroll(data-scroll='right'  data-scroll-hidden='horizontal')
             .wjs-scroll__content-wrapper
               .wjs-scroll__content
                 ul.popup__list#contactslist
-                  li.popup__item
-                    label
-                      input(type="checkbox")
-                      i.ico.check &#x5a;
-                      i.ico.uncheck &#x56;
-                      span Вася Пупкін
-                      span (@WEORI75MoBvQOhNq)
+                  //- li.popup__item
+                  //-   label
+                  //-     input(type="checkbox")
+                  //-     i.ico.check &#x5a;
+                  //-     i.ico.uncheck &#x56;
+                  //-     span Вася Пупкін
+                  //-     span (@WEORI75MoBvQOhNq)
     .popup__footer
       button(type="submit").popup__btn так
       button(type="button" data-role="resetPopup").popup__btn скасувати
