--- a/app/templates/popups/popups.scss
+++ b/app/templates/popups/popups.scss
@@ -345,6 +345,7 @@
       overflow: hidden;
       margin-top: 1px;
       text-shadow: 1px 1px 6px black;
+      cursor: pointer;
       input {
         position: absolute;
         bottom: 100%;
