--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -106,7 +106,7 @@
       button.popup__close
         i.ico &#x4d;
     .popup__body
-      form#langswitch(name="langswitch")
+      form#themaswitch(name="themaswitch")
         label.popup__label
           input(type="radio" name="thema" value="default")
           i.ico &#x5c;
@@ -120,7 +120,7 @@
           .popup__divider
           span dark
     .popup__footer
-      button(type="submit" form="langswitch").popup__btn так
+      button(type="submit" form="themaswitch").popup__btn так
       button(type="button" data-role="resetPopup").popup__btn скасувати
 
   //- password change
