--- a/app/templates/groupcard/groupcard.pug
+++ b/app/templates/groupcard/groupcard.pug
@@ -30,4 +30,4 @@ ul.card-menu
   li
     button(type="button" data-role="showClearHistory" data-id=groupID) очистити історію
 
-button(type="button" data-group="true" data-id=groupID).round-btn: i.ico &#x6a;
+button(type="button" data-group="true" data-id=groupID).round-btn.round-btn_active: i.ico &#x6a;
