--- a/app/templates/round-button/round-button.scss
+++ b/app/templates/round-button/round-button.scss
@@ -1,4 +1,5 @@
 .round-btn {
+  display: none;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -16,5 +17,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+  }
+  &_active {
+    display: block;
   }
 }
