--- a/app/templates/chat/chat.pug
+++ b/app/templates/chat/chat.pug
@@ -112,9 +112,10 @@ ul.chat-list(class=modClass)
             } else if (message.status == 'delivered') {
               modClass = 'message-status_delivered'
             }
-          .message-status(class=modClass)
-            i.ico &#x4e;
-            i.ico &#x4e;
+          if message.whoID
+            .message-status(class=modClass)
+              i.ico &#x4e;
+              i.ico &#x4e;
 
 //- ul.chat-list.chat-list_mono
 //-   li.chat-list__item.chat-list__item_date 12.12.2021, пт
