--- a/app/templates/usercard/usercard.pug
+++ b/app/templates/usercard/usercard.pug
@@ -37,7 +37,7 @@ ul.card-menu
   li
     button(type="button" data-role="showClearHistory" data-id="" + id + "") очистити історію
 
-button(type="button" data-group="false" data-id="" + id + "").round-btn: i.ico &#x6a;
+button(type="button" data-group="false" data-id="" + id + "").round-btn.round-btn_active: i.ico &#x6a;
 
 //- .logo.logo_user-card
 //-   p.logo__name PR
