на чорнову готово

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -430,6 +430,9 @@ html.wjs-MobileHeightFix body {
   border: none;
   cursor: default;
 }
+.chat-form__btn_file {
+  cursor: pointer;
+}
 .chat-form__btn_active {
   cursor: pointer;
   background-color: #003344;
@@ -437,6 +440,28 @@ html.wjs-MobileHeightFix body {
 }
 .chat-form__btn i {
   font: 2em ElegantIcons;
+}
+.chat-form__file-input-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 0px;
+  left: 0;
+  bottom: 41px;
+  background-color: #34cec0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  -webkit-transition: height 0.3s;
+  -o-transition: height 0.3s;
+  transition: height 0.3s;
+}
+.chat-form__file-input-wrapper_active {
+  border-top: 1px solid #1e90ff;
+  height: 40px;
 }
 
 .menu-list__item {
@@ -577,6 +602,10 @@ html.wjs-MobileHeightFix body {
   background-color: dodgerblue;
   border-bottom-right-radius: 0 0;
 }
+.chat-list__item_sent .chat-list__message-file-icon::before {
+  border-top: 6px solid dodgerblue;
+  border-right: 6px solid dodgerblue;
+}
 .chat-list__item_received {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -590,12 +619,80 @@ html.wjs-MobileHeightFix body {
 .chat-list__item_received .logo {
   cursor: pointer;
 }
+.chat-list__item_received .chat-list__message-file-icon::before {
+  border-top: 6px solid lightskyblue;
+  border-right: 6px solid lightskyblue;
+}
 .chat-list__message {
   padding: 2px 6px;
   border: 1px solid transparent;
   border-radius: 10px;
   position: relative;
   min-width: 60px;
+}
+.chat-list__message-file {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 6px;
+  cursor: pointer;
+}
+.chat-list__message-file-icon {
+  border: 1px solid black;
+  width: 45px;
+  height: 55px;
+  position: relative;
+  border-radius: 4px;
+}
+.chat-list__message-file-icon::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid transparent;
+}
+.chat-list__message-file-icon::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  border-top: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid black;
+  border-left: 6px solid black;
+}
+.chat-list__message-file-extention {
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  position: absolute;
+  bottom: 5px;
+  background-color: black;
+  font-size: 0.8em;
+  font-weight: 900;
+  width: 100%;
+  padding: 3px;
+  color: lightgrey;
+}
+.chat-list__message-file-name {
+  padding: 0 10px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+}
+.chat-list__message-file-download {
+  font-size: 1.1em;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  color: black;
+  border-radius: 4px;
 }
 .chat-list__message-date {
   font: 0.7em reg;
