--- a/app/templates/chat/chat.scss
+++ b/app/templates/chat/chat.scss
@@ -22,6 +22,10 @@
         background-color             : dodgerblue;
         border-bottom-right-radius   : 0 0;
       }
+      .chat-list__message-file-icon::before {
+        border-top: 6px solid dodgerblue;
+        border-right: 6px solid dodgerblue;
+      }
     }
     &_received {
       justify-content                : flex-start;
@@ -33,6 +37,10 @@
       .logo {
         cursor                       : pointer;
       }
+      .chat-list__message-file-icon::before {
+        border-top: 6px solid lightskyblue;
+        border-right: 6px solid lightskyblue;
+      }
     }
   }
   &__message {
@@ -43,6 +51,64 @@
     min-width                        : 60px;
   }
   &__message-text {}
+  &__message-file{
+    display: flex;
+    align-items: center;
+    padding: 6px;
+    cursor: pointer;
+  }
+  &__message-file-icon {
+    border: 1px solid black;
+    width: 45px;
+    height: 55px;
+    position: relative;
+    border-radius: 4px;
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      // border-top: 6px solid red;
+      // border-right: 6px solid red;
+      border-bottom: 6px solid transparent;
+      border-left: 6px solid transparent;
+    }
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      border-top: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid black;
+      border-left: 6px solid black;
+    }
+  }
+  &__message-file-extention {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    position: absolute;
+    bottom: 5px;
+    background-color: black;
+    font-size: .8em;
+    font-weight: 900;
+    width: 100%;
+    padding: 3px;
+    color: lightgrey;
+  }
+  &__message-file-name {
+    padding: 0 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &__message-file-download {
+    font-size: 1.1em;
+    align-self: end;
+    color: black;
+    border-radius: 4px;
+  }
   &__message-date {
     font                             : .7em reg;
   }
